unpackaged/main/default/objects/Reports_Setting__mdt/fields/Rpt_Description__c.field-meta.xml
<CustomField>
    <fullName>Rpt_Description__c</fullName>
    <label>Rpt Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>