unpackaged/main/default/objects/Reports_Setting__mdt/fields/Rpt_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Rpt_Record_Type__c</fullName>
    <label>Rpt Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>