unpackaged/main/default/objects/Reports_Setting__mdt/fields/Rpt_Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpt_Report_Name__c</fullName>
    <label>Rpt Report Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>