unpackaged/main/default/objects/Reports_Setting__mdt/fields/Rpt_Report_URL__c.field-meta.xml
<CustomField>
    <fullName>Rpt_Report_URL__c</fullName>
    <label>Rpt Report URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>